--- a/index.html
+++ b/index.html
@@ -46,16 +46,10 @@
     <div class="container">
     <h2>Sobre Mi</h2>
     <div class="wrapper">
-    	<div class="col-md-6 col-xs-6 text-center ">
-   		<p >Hola mi nombre es <span>ESTHER URETA OSCANOA</span>futura<span> BACKEND</span> y actualmente<span> DESARROLLADORA WEB </span>alumna de Laboratoria .
-      En la vida no hay <span>TRIUNFO SIN SACRIFICIO</span> la vida es como una carrera si podrás tropezarte pero tienes que levantarte y seguir sin mirar a los costados luchar por lo que uno  quiere y si alguien te dice no tú no puedes simplemente no hagas caso porque al cabo un tiempo le dirás YO SI PUEDO lo imposible solo tú lo puedes hacer posible.
-      Auxiliar de KARATE es un deporte que amo y que me ha demostrado que todo se puede que todo en la vida se puede lograr solo PROPONTELO. </p>
+    	<div class="col-md-12 col-xs-12 text-center ">
+   		<p>Hola mi nombre es Esther Ureta Oscanoa, futura full stack y actualmente DESARROLLADORA WEB front end junior de Laboratoria. Creo que en la vida no hay TRIUNFO SIN SACRIFICIO. La vida es como una carrera, sí, podrás tropezarte, pero tienes que levantarte y seguir sin mirar a los costados. Hay que luchar por lo que uno quiere y si alguien te dice "tú no puedes", simplemente no hacerles caso, porque al cabo de un tiempo le dirás YO SÍ PUEDO. Además, soy maestra de Karate, el cual es un deporte que amo y que me ha demostrado que todo se puede en la vida. Solo PROPóNTELO.<p>
 
    	</div>
-    <div class="col-xs-6 text-center">
-      <img src="img/yop.jpg" width="50%;">
-    </div>
-
     </div>
     </div>
    </section>
