--- a/index.html
+++ b/index.html
@@ -1,159 +1,239 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-	<meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>My portafolio</title>
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/font-awesome.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
-    <link href="css/animate.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+
+    <title>Portafolio</title>
+
+    <!-- Bootstrap Core CSS -->
+    <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
+
+    <!-- Custom Fonts -->
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css" type="text/css">
+
+    <!-- Plugin CSS -->
+    <link rel="stylesheet" href="css/animate.min.css" type="text/css">
+
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="css/creative.css" type="text/css">
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
 </head>
-<body>
-   <header>
-   	<nav>
-   		<ul>
-   			<li><a href="#" class="">Hola</a></li>
-   			<li><a href="#sobre-mi " class="">Sobre Mi</a></li>
-   			<li><a href="#habilidades" class="">Habilidades</a></li>
-   			<li><a href="#trabajos" class="">Trabajos</a></li>
-   			<li><a href="#contact-me" class="">Contactame</a></li>
-   		</ul>
-   	</nav>
-   </header>
-   <section>
-   	<div id="header"class="hero-img title">
-   	    <div class="wrapper text-center">
-   	        <h1 class="animated bounceln"> <b>Esther Ureta Osacanoa </b> </h1>
-            <p style="padding-top:20px;">Yo soy </p>
-      <div class="scroller">
-        <div class="inner">
-          <span>Programadora.</span>
-          <span>Autodidacta.</span>
-          <span>Libre</span>
-          <span>Emprendedora</span>
+
+<body id="page-top">
+
+    <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
+        <div class="container-fluid">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand page-scroll" href="#page-top">Esther Ureta</a>
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a class="page-scroll" href="#about">Sobre mi</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#services">Habilidades</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#portfolio">Portafolio</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#contact">Contáctame</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
         </div>
+        <!-- /.container-fluid -->
+    </nav>
+
+    <header>
+        <div class="header-content">
+            <div class="header-content-inner">
+                <h1>Esther Ureta Oscanoa</h1>
+                <hr>
+                <p>Desarrolladora web front end junior</p>
+                <a href="#about" class="page-scroll"><i class="fa fa-4x fa-angle-down"></i></a>
+            </div>
         </div>
-   	        <a href="#target" class="up"><i class="fa fa-angle-down hover-none"></i></a>
-   	    </div>
-   	</div>
-   </section>
+    </header>
 
-   <section class="about-me pd-all" id="sobre-mi">
-    <div class="container">
-    <h2>Sobre Mi</h2>
-    <div class="wrapper">
-    	<div class="col-md-12 col-xs-12 text-center ">
-   		<p>Hola mi nombre es Esther Ureta Oscanoa, futura full stack y actualmente DESARROLLADORA WEB front end junior de Laboratoria. Creo que en la vida no hay TRIUNFO SIN SACRIFICIO. La vida es como una carrera, sí, podrás tropezarte, pero tienes que levantarte y seguir sin mirar a los costados. Hay que luchar por lo que uno quiere y si alguien te dice "tú no puedes", simplemente no hacerles caso, porque al cabo de un tiempo le dirás YO SÍ PUEDO. Además, soy maestra de Karate, el cual es un deporte que amo y que me ha demostrado que todo se puede en la vida. Solo PROPóNTELO.<p>
+    <section class="bg-primary" id="about">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 text-center">
+                    <h2 class="section-heading">Hola !!!</h2>
+                    <hr class="light">
+                    <p class="text-faded">Hola mi nombre es Esther Ureta Oscanoa, futura full stack y actualmente DESARROLLADORA WEB front end junior de Laboratoria. Creo que en la vida no hay TRIUNFO SIN SACRIFICIO. La vida es como una carrera, sí, podrás tropezarte, pero tienes que levantarte y seguir sin mirar a los costados. Hay que luchar por lo que uno quiere y si alguien te dice "tú no puedes", simplemente no hacerles caso, porque al cabo de un tiempo le dirás YO SÍ PUEDO. Además, soy maestra de Karate, el cual es un deporte que amo y que me ha demostrado que todo se puede en la vida. Solo PROPóNTELO.<p>
+                    <!--<a href="#" class="btn btn-default btn-xl">Get Started!</a>-->
+                </div>
+            </div>
+        </div>
+    </section>
 
-   	</div>
-    </div>
-    </div>
-   </section>
-   <section class="skil pd-all" id="habilidades">
-   	<div class="container col-xs-12 text-center">
-   	    <h2>Habilidades</h2>
-   		<dl class="skills-diagram">
-   			<dt class="skill-5">Boostrap</dt>
-   			<dd>5</dd>
-   			<dt class="skill-10">HTML</dt>
-   			<dd>10</dd>
-   			<dt class="skill-3">PHP</dt>
-   			<dd>3</dd>
-   			<dt class="skill-8">WORDPRESS</dt>
-   			<dd>8</dd>
-   			<dt class="skill-4">Ruby</dt>
-   			<dd>4</dd>
-   			<dt class="skill-6">GIT HUB</dt>
-   			<dd>6</dd>
-   			<dt class="skill-7">JavaScript</dt>
-   			<dd>7</dd>
-   			<dt class="skill-9">CSS</dt>
-   			<dd>9</dd>
-   			<!--<dt class="skill-2">C#</dt>
-   			<dd>2</dd>-->
-   		</dl>
-        
-     </div>  
-   </section>
-   <section>
-   	<div class="col-xs-12 pd-0 ">
-   		<div class="dream">
-   			<p>NO HAY TRIUNFO SIN SACRIFICIO</p>
-   		</div>
-   	</div>
-   </section>
-   <section class="project" id="trabajos">
-   	<div class="container">
-   		<div class="">
-   			<h2>Trabajos</h2>
-   			<div class="col-md-4">
-   			<figure class="images red"><img src="img/about.png"/>
-   					<figcaption>
-   						<h2>Freelance</h2>
-   					</figcaption><a href="http://azumiflores.github.io/freelance/" target="blanck"></a>
-   				</figure>
-   			</div>
-   			<div class="col-md-4">
-   				<figure class="images green"><img src="img/site.png"/>
-   					<figcaption>
-   						<h2>Site name</h2>
-   					</figcaption><a href="http://azumiflores.github.io/sit-bootsrap/" target="blanck"></a>
-   				</figure>
-   			</figure>
-   		</div>
-   		<div class="col-md-4">
-   			<figure class="images navy"><img src="img/home.png"/>
-   				<figcaption>
-   					<h2>Dashboard</h2>
-   				</figcaption><a href="http://azumiflores.github.io/theme/" target="blanck"></a>
-   			</figure>
-   		</div>
-   	</div>
-   </div>   	
-   </section >
-   <section id="contact-me " class="contactame">
-   <div class=" wrapper text-center mr-10 ">
-    <div class="col-md-12"><h2 >Contactame</h2></div>
-   	<div class="col-xs-4">
-   		<i class="fa fa-phone"></i>
-   		<p>971210920</p>
-   	</div>
-   	<div class="col-xs-4">
-   			<i class="fa fa-envelope"></i>
-   			<p>estherureta10@gmail.com</p>
-   	</div>
-   	<div class="col-xs-4">
-   		<a href="https://github.com/azumiflores" target="blanck">
-   			<i class="fa fa-github-alt"></i>
-   			<p>Git Hub</p>
-   		</a>
-   	</div>
-   
-   </div>
-   	
-   </section>
-   <footer>
-   	<div class="col-xs-12 text-center">
-   		<p>estherureta10@gmail.com</p>
-   	</div>
-   </footer>
+    <section id="services">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Habilidades</h2>
+                    <hr class="primary">
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="service-box">
+                        <i class="fa  fa-4x fa-html5 wow bounceIn text-primary"></i>
+                        <h3>Html5</h3>
+                        <p class="text-muted">70%</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="service-box">
+                        <i class="fa fa-4x fa-css3 wow bounceIn text-primary" data-wow-delay=".1s"></i>
+                        <h3>Css3</h3>
+                        <p class="text-muted">75%</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="service-box">
+                        <i class="fa fa-4x fa-bold wow bounceIn text-primary" data-wow-delay=".2s"></i>
+                        <h3>Bootstrap</h3>
+                        <p class="text-muted">50%</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="service-box">
+                        <i class="fa fa-4x fa-wordpress wow bounceIn text-primary" data-wow-delay=".3s"></i>
+                        <h3>Wordpress</h3>
+                        <p class="text-muted">30%</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
-   <script type="text/javascript">
-       /* Demo purposes only */
-  $("figure").mouseleave(
-    function() {
-      $(this).removeClass("hover");
-    }
-  );
+    <section class="no-padding" id="portfolio">
+        <div class="container-fluid">
+            <div class="row no-gutter">
+                <div class="col-lg-4 col-sm-6">
+                    <a href="http://azumiflores.github.io/freelance/" class="portfolio-box">
+                        <img src="img/portfolio/images-2.png" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-name">
+                                    Freelance :)
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <a href="http://azumiflores.github.io/theme/" class="portfolio-box">
+                        <img src="img/portfolio/images-1.png" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-name">
+                                    Theme ;)
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <a href="http://azumiflores.github.io/sit-bootsrap/" class="portfolio-box">
+                        <img src="img/portfolio/images-3.png" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-name">
+                                    Site :)
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <a href="http://azumiflores.github.io/dashy/" class="portfolio-box">
+                        <img src="img/portfolio/images-4.png" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-name">
+                                    Dashy
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>            
+    </section>
 
-</script>
-   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-   <script src="js/jquery.js"></script>
-   <script src="js/bootstrap.min.js"></script>
-   <script src="js/main.js"></script>
+    <aside class="bg-dark">
+        <div class="container text-center">
+            <div class="call-to-action">
+                <h2>No hay triunfo sin sacrificio</h2>
+                <!--<a href="#" class="btn btn-default btn-xl wow tada">Download Now!</a>-->
+            </div>
+        </div>
+    </aside>
+
+    <section id="contact">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 text-center">
+                    <h2 class="section-heading">Contáctame !</h2>
+                    <hr class="primary">
+                    <p>Lista para empesar un nuevo proyecto contigo !!</p>
+                </div>
+                <div class="col-lg-4 col-lg-offset-2 text-center">
+                    <i class="fa fa-phone fa-3x wow bounceIn"></i>
+                    <p>995-554-290</p>
+                </div>
+                <div class="col-lg-4 text-center">
+                    <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
+                    <p>estherureta10@gmail.com</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- jQuery -->
+    <script src="js/jquery.js"></script>
+
+    <!-- Bootstrap Core JavaScript -->
+    <script src="js/bootstrap.min.js"></script>
+
+    <!-- Plugin JavaScript -->
+    <script src="js/jquery.easing.min.js"></script>
+    <script src="js/jquery.fittext.js"></script>
+    <script src="js/wow.min.js"></script>
+
+    <!-- Custom Theme JavaScript -->
+    <script src="js/creative.js"></script>
+
 </body>
+
 </html>
