--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             <div class="row no-gutter">
                 <div class="col-lg-4 col-sm-6">
                     <a href="http://azumiflores.github.io/freelance/" class="portfolio-box">
-                        <img src="img/portfolio/images-2.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/images-2.PNG" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-name">
@@ -153,7 +153,7 @@
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <a href="http://azumiflores.github.io/theme/" class="portfolio-box">
-                        <img src="img/portfolio/images-1.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/images-1.PNG" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-name">
@@ -165,7 +165,7 @@
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <a href="http://azumiflores.github.io/sit-bootsrap/" class="portfolio-box">
-                        <img src="img/portfolio/images-3.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/images-3.PNG" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-name">
@@ -177,7 +177,7 @@
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <a href="http://azumiflores.github.io/dashy/" class="portfolio-box">
-                        <img src="img/portfolio/images-4.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/images-4.PNG" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-name">
