--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
     <section class="no-padding" id="portfolio">
         <div class="container-fluid">
             <div class="row no-gutter">
-                <div class="col-lg-4 col-sm-6">
+                <div class="col-lg-6 col-sm-6">
                     <a href="http://azumiflores.github.io/freelance/" class="portfolio-box">
                         <img src="img/portfolio/images-2.PNG" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
@@ -151,9 +151,9 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-4 col-sm-6">
+                <div class="col-lg-6 col-sm-6">
                     <a href="http://azumiflores.github.io/theme/" class="portfolio-box">
-                        <img src="img/portfolio/images-1.PNG" class="img-responsive" alt="">
+                        <img src="img/portfolio/images-1.png" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-name">
@@ -163,9 +163,10 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-4 col-sm-6">
+            <div class="row no-gutter">
+                <div class="col-lg-6 col-sm-6">
                     <a href="http://azumiflores.github.io/sit-bootsrap/" class="portfolio-box">
-                        <img src="img/portfolio/images-3.PNG" class="img-responsive" alt="">
+                        <img src="img/portfolio/images-3.png" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-name">
@@ -175,9 +176,9 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-4 col-sm-6">
+                <div class="col-lg-6 col-sm-6">
                     <a href="http://azumiflores.github.io/dashy/" class="portfolio-box">
-                        <img src="img/portfolio/images-4.PNG" class="img-responsive" alt="">
+                        <img src="img/portfolio/images-4.png" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-name">
@@ -186,7 +187,8 @@
                             </div>
                         </div>
                     </a>
-                </div>            
+                </div> 
+            </div>           
     </section>
 
     <aside class="bg-dark">
