reemplasado las img

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     </section>
 
     <section class="no-padding" id="portfolio">
-        <div class="container-fluid">
+        <div class="container-fluid pd-none">
             <div class="row no-gutter">
                 <div class="col-lg-6 col-sm-6">
                     <a href="http://azumiflores.github.io/freelance/" class="portfolio-box">
@@ -166,11 +166,11 @@
             <div class="row no-gutter">
                 <div class="col-lg-6 col-sm-6">
                     <a href="http://azumiflores.github.io/sit-bootsrap/" class="portfolio-box">
-                        <img src="img/portfolio/images-3.PNG" class="img-responsive" alt="">
+                        <img src="img/portfolio/images-4.PNG" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-name">
-                                    Site :)
+                                    Dashy :)
                                 </div>
                             </div>
                         </div>
@@ -178,11 +178,11 @@
                 </div>
                 <div class="col-lg-6 col-sm-6">
                     <a href="http://azumiflores.github.io/dashy/" class="portfolio-box">
-                        <img src="img/portfolio/images-4.PNG" class="img-responsive" alt="">
+                        <img src="img/portfolio/images-3.PNG" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-name">
-                                    Dashy
+                                    Site:)
                                 </div>
                             </div>
                         </div>
